# ellidri

./: .gitignore  Cargo.toml  LICENSE  README.md  ellidri.toml
.builds/: linux.yml  tests.yml  windows.yml
benches/: message.rs  state.rs
doc/: config_example.scfg  config_example.yaml  config_full.scfg  config_full.yaml  ellidri.conf  ellidri.service  motd.txt  setup-guide.md
ellidri-reader/: Cargo.toml  README.md
ellidri-reader/src/: lib.rs
ellidri-tokens/: Cargo.toml  README.md
ellidri-tokens/benches/: message.rs
ellidri-tokens/src/: buffers.rs  command.rs  lib.rs  message.rs  mode.rs  rpl.rs
ellidri-unicase/: Cargo.toml  README.md
ellidri-unicase/src/: lib.rs
src/: auth.rs  channel.rs  client.rs  config.rs  control.rs  db.rs  info.txt  init.sql  lib.rs  lines.rs  main.rs  message.rs  misc.rs  modes.rs  net.rs  state.rs  tls.rs  util.rs
src/config/: mod.rs  parser.rs
src/data/: auth.rs  cap.rs  mod.rs  modes.rs  req.rs  strings.rs
src/state/: capabilities.rs  info.txt  ircv3.rs  message_tags.rs  mod.rs  rfc2812.rs  sasl.rs  setname.rs  test.rs  v1.rs  v3.rs
