[workspace]
members = [".", "ellidri-unicase"]


[package]
name = "ellidri"
version = "2.3.0"
authors = ["Hubert Hirtz <hubert.hirtz@laposte.net>"]
edition = "2018"
description = "Your kawaii IRC server"
homepage = "https://git.sr.ht/~taiite/ellidri"
repository = "https://git.sr.ht/~taiite/ellidri"
readme = "README.md"
keywords = ["irc"]
categories = ["network-programming"]
license = "ISC"


[features]
default = ["postgres", "sqlite"]

# PostgreSQL support
postgres = ["r2d2", "r2d2_postgres", "tokio-postgres"]

# SQLite support
sqlite = ["r2d2", "r2d2_sqlite", "rusqlite"]


[dependencies]
# Async runtime
futures = { version = "0.3", default-features = false, features = ["std"] }
slab = { version = "0.4", default-features = false }
tokio = { version = "0.2", default-features = false, features = ["blocking", "io-util", "rt-threaded", "sync", "tcp", "time"] }

# TLS support
native-tls = { version = "0.2", default-features = false }
tokio-tls = { version = "0.3", default-features = false }

# Case-insensitive HashMap.
# Separated from the main crate because it contains unsafe code.
ellidri-unicase = { version = "1.0.0", path = "ellidri-unicase" }

# Logging and CLI
clap = { version = "2.33", default-features = false }
env_logger = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false, features = ["max_level_trace", "release_max_level_info"] }

# Time string generation (@time message tag and RPL_TIME reply)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Masks implementation
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-case"] }
regex-syntax = { version = "0.6", default-features = false, features = ["unicode-case"] }

# Initialization of the HashSet of capabilities
lazy_static = { version = "1", default-features = false }

# msgid tag generation
rand = { version = "0.7", default-features = false, features = ["std"] }
rand_chacha = { version = "0.2", default-features = false, features = ["std"] }
uuid = { version = "0.8", default-features = false, features = ["std"] }

# SASL
base64 = { version = "0.12", default-features = false, features = ["std"] }
r2d2 = { version = "0.8", default-features = false, optional = true }
r2d2_sqlite = { version = "0.14", default-features = false, optional = true }
r2d2_postgres = { version = "0.16", default-features = false, optional = true }
rusqlite = { version = "0.21", default-features = false, optional = true }
tokio-postgres = { version = "0.5", default-features = false, optional = true }
