[workspace]
members = [".", "ellidri-reader", "ellidri-tokens", "ellidri-unicase"]


[package]
name = "ellidri"
version = "3.0.0"
authors = ["Hubert Hirtz <hubert.hirtz@laposte.net>"]
edition = "2018"
description = "Your kawaii IRC server"
homepage = "https://sr.ht/~taiite/ellidri"
repository = "https://git.sr.ht/~taiite/ellidri"
readme = "README.md"
keywords = ["irc"]
categories = ["network-programming"]
license = "ISC"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true


[dependencies]
# Async runtime
slab = { version = "0.4", default-features = false }
tokio = { version = "0.2", default-features = false, features = ["blocking", "io-util", "macros", "rt-threaded", "signal", "stream", "sync", "tcp", "time"] }

# TLS
tokio-rustls = { version = "0.13", default-features = false }

# Case-insensitive HashMap.
# Separated from the main crate because it contains unsafe code.
ellidri-unicase = { version = "2.1.0", path = "ellidri-unicase" }

# IRC parsing
ellidri-reader = { version = "0.1", path = "ellidri-reader" }
ellidri-tokens = { version = "0.1.0", path = "ellidri-tokens" }

# Logging
env_logger = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false, features = ["max_level_trace", "release_max_level_info"] }

# Configuration
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_yaml = { version = "0.8", default-features = false }

# Time string generation (@time message tag and RPL_TIME reply)
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# msgid tag generation
base64 = { version = "0.12", default-features = false, features = ["std"] }
rand_chacha = { version = "0.2", default-features = false, features = ["std"] }
